# project-graph-mapper

.pgm/: CONTEXT.md  graph.html  graph.json  graph.mermaid
project-graph-mapper/: .gitignore  README.md  pyproject.toml  skills-lock.json
project-graph-mapper/.agents/rules/: pgm.md
project-graph-mapper/.pgm/: CONTEXT.md  graph.html  graph.json
project-graph-mapper/src/project_graph_mapper/: cli.py  server.py  watcher.py
project-graph-mapper/src/project_graph_mapper/graph/: builder.py  models.py  query.py
project-graph-mapper/src/project_graph_mapper/output/: html_writer.py  json_writer.py  md_writer.py  summarizer.py
project-graph-mapper/src/project_graph_mapper/parser/: ai_parser.py  base.py  csharp_parser.py  go_parser.py  java_parser.py  js_parser.py  python_parser.py  rust_parser.py  tree_sitter_base.py
project-graph-mapper/tests/: test_core.py  test_parsers.py  test_summarizer.py  test_viz.py
